<resources>
    <string name="app_name">TikiParkApp</string>
    <string name="create_but">Create profile</string>
    <string name="login_but">Login</string>
    <string name="email_input">Email</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="welcome_user">Welcome User</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="manageWallet">Wallet</string>
    <string name="viewStats">Statistics</string>
    <string name="locationInput">Location</string>
    <string name="park">Select Spot</string>
    <string name="back">Back</string>
    <string name="create_parking_spot">Create Parking Spot</string>
    <string-array name="parking_status_options">
        <item>Available</item>
        <item>Occupied</item>
        <item>Reserved</item>
    </string-array>
    <string name="title_activity_maps">Maps</string>
    <string name="ok">Ok</string>
    <string name="there_was_a_problem_fetching_the_location_please_try_again">There was a problem fetching the location, please try again.</string>
    <string name="do_you_want_to_authorise_this_app_to_know_your_location">Do you want to authorise this app to know your location?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="password_reset_has_been_sent_to_your_email">Password reset has been sent to your email.</string>
    <string name="edit_spot">Edit Spot</string>
    <string name="status_available_occupied_reserved">Status (available / occupied / reserved)</string>
    <string name="price_per_hour">Price Per Hour</string>
    <string name="update_spot">Update Spot</string>
    <string name="delete_spot">Delete Spot</string>
    <string name="select_parking_spot">Select Parking Spot</string>
    <string name="manage_wallet">Manage Wallet</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="search_for_spot">Search for spot</string>
    <string name="tikipark">TikiPark</string>
    <string name="textview">TextView</string>
    <string name="stats_overview">Stats Overview</string>
    <string name="total_amount_spent">Total Amount Spent:</string>
    <string name="total_reservations">Total Reservations:</string>
    <string name="total_parking_time">Total Parking Time:</string>
    <string name="welcome_to_tikipark">Welcome to TikiPark!</string>
    <string name="register">Register:</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register2">Register</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number:</string>
    <string name="cardholder_name">Cardholder Name:</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="transaction_completed">Transaction Completed!</string>
    <string name="your_receipt_will_be_sent_to_your_email_address">Your receipt will be sent to your email address!</string>
    <string name="Continue">Continue</string>
    <string name="you_parked_successfully">You parked successfully!</string>
    <string name="tikipark_logo">TikiPark Logo</string>
    <string name="start_time">Start time:</string>
    <string name="duration">Duration:</string>
    <string name="estimated_cost">Estimated Cost:</string>
    <string name="leave_amp_pay"><![CDATA[Leave & Pay]]></string>
    <string name="manage_users">Manage Users</string>
    <string name="role_user_admin">Role (user / admin)</string>
    <string name="update_role">Update Role</string>
    <string name="delete_user">Delete User</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login">Login:</string>
    <string name="new_user">New user?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="insufficient_funds">Insufficient Funds</string>
    <string name="needed">Needed:</string>
    <string name="balance">Balance:</string>
    <string name="difference">Difference:</string>
    <string name="add_cash">Add cash</string>
    <string name="selected_location">Selected Location:</string>
    <string name="some_location">Some location.</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="create">Create</string>
    <string name="total_users_0">Total Users: 0</string>
    <string name="total_parking_spots_0">Total Parking Spots: 0</string>
    <string name="total_available_spots_0">Total Available Spots: 0</string>
    <string name="total_amount_gained_0_00">Total Amount Gained: $0.00</string>
    <string name="total_reservations_0">Total Reservations: 0</string>
    <string name="total_parking_time_0_hrs">Total Parking Time: 0 hrs</string>
    <string name="create_parking_spots">Create Parking Spots</string>
    <string name="view_all">View All</string>
    <string name="add_funds">Add Funds</string>
    <string name="amount">Amount:</string>
    <string name="_0_00">0.00</string>
    <string name="balance_0_00">Balance: €0.00</string>

</resources>