<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/primary_background"
    tools:context=".activities.ManageUsers">

    <!-- Title -->
    <TextView
        android:id="@+id/manage_users_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_users"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- ListView for users -->
    <ListView
        android:id="@+id/listView_users"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primary_background"
        app:layout_constraintTop_toBottomOf="@id/manage_users_title"
        app:layout_constraintBottom_toTopOf="@id/edit_user_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Edit Container -->
    <LinearLayout
        android:id="@+id/edit_user_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/listView_users"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_user">

        <EditText
            android:id="@+id/edit_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/role_user_admin"
            android:inputType="text"
            android:minHeight="48dp"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_update_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/update_role"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/ubuntu_mono" />

        <Button
            android:id="@+id/btn_delete_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/delete_user"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/ubuntu_mono" />
    </LinearLayout>

    <!-- Back Button -->
    <Button
        android:id="@+id/btn_back_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/button_background"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/ubuntu_mono"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>