<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3FDE2A1"
    tools:context=".activities.InsufficientFunds">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/insufficient_funds"
            android:fontFamily="@font/ubuntu_mono"
            android:textColor="#000000"
            android:textSize="32sp" />

        <!-- Image -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/tikipark_logo"
            android:src="@drawable/tikipark" />


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/needed"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:ignore="TextSizeCheck" />


            <TextView
                android:id="@+id/insufFunds_requiredAmount_Txt"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="#000000"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/balance"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/insufFunds_currentAmount_Txt"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="#000000"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difference"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/insufFunds_difference_Txt"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="#000000"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/insufFunds_addMoney_Btn"
        android:background="@color/button_background"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:text="@string/add_cash"
        android:fontFamily="@font/ubuntu_mono"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>